discussion/kv_engine/155089/155089_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use atomic.h and syncobject.h from platform

Delete the copy of atomic.h and syncobject.h and use the one
in platform

Change-Id: I20d42380f8145c06848c7f33434856d5566a3e0f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-05 07:14:40.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-05 08:06:40.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9535/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:124:8: error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [27]") [clang-diagnostic-error]
    os << "SharedMetaDataTable: size:" << table.smt.size() << std::endl;
       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:262:5: note: candidate function template not viable: no known conversion from "const char [27]" to "const std::error_code" for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:69:5: note: candidate template ignored: could not match "__shared_ptr<type-parameter-0-2, _Lp>" against "char const[27]"
    operator<<(std::basic_ostream<_Ch, _Tr>& __os,
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/string_view:622:5: note: candidate template ignored: could not match "basic_string_view<type-parameter-0-0, type-parameter-0-1>" against "const char *"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:6458:5: note: candidate template ignored: could not match "basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>" against "char const[27]"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:122:15: note: candidate template ignored: could not match "SharedMetaDataTable<type-parameter-0-0, type-parameter-0-1>" against "char const[27]"
std::ostream& operator<<(std::ostream& os,
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:124:68: error: no member named "endl" in namespace "std"; did you mean "end"? [clang-diagnostic-error]
    os << "SharedMetaDataTable: size:" << table.smt.size() << std::endl;
                                                                   ^~~~
                                                                   end
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/initializer_list:101:5: note: "end" declared here
    end(initializer_list<_Tp> __ils) noexcept
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:126:12: error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [6]") [clang-diagnostic-error]
        os << "  id:" << key.to_string() << ", value:" << *value
           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:262:5: note: candidate function template not viable: no known conversion from "const char [6]" to "const std::error_code" for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:69:5: note: candidate template ignored: could not match "__shared_ptr<type-parameter-0-2, _Lp>" against "char const[6]"
    operator<<(std::basic_ostream<_Ch, _Tr>& __os,
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/string_view:622:5: note: candidate template ignored: could not match "basic_string_view<type-parameter-0-0, type-parameter-0-1>" against "const char *"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:6458:5: note: candidate template ignored: could not match "basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>" against "char const[6]"
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:122:15: note: candidate template ignored: could not match "SharedMetaDataTable<type-parameter-0-0, type-parameter-0-1>" against "char const[6]"
std::ostream& operator<<(std::ostream& os,
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:127:53: error: no member named "endl" in namespace "std"; did you mean "end"? [clang-diagnostic-error]
           << ", refs:" << value.refCount() << std::endl;
                                                    ^~~~
                                                    end
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/initializer_list:101:5: note: "end" declared here
    end(initializer_list<_Tp> __ils) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9535/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/shared_metadata_table.h:124:8:
error: invalid operands to binary expression ("std::ostream" (aka "basic_ostream<char>") and "const char [27]") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9535/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8131/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36485/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/82/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31176/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11110/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10180/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11526/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19112/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11256/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
